--- a/stress-k8s.toml
+++ b/stress-k8s.toml
@@ -2,7 +2,7 @@
 name = "stress"
 
 [global]
-plan = "graphsync"
+plan = "data-transfer-benchmark"
 case = "stress"
 total_instances = 2
 builder = "docker:go"
