--- a/p2p-http-libp2phttp-graphsync.toml
+++ b/p2p-http-libp2phttp-graphsync.toml
@@ -6,39 +6,27 @@ plan = "data-transfer-benchmark"
 case = "stress"
 total_instances = 2
 builder = "docker:go"
-runner = "cluster:k8s"
-
-[global.build_config]
-push_registry=true
-go_proxy_mode="remote"
-go_proxy_url="http://localhost:8081"
-registry_type="aws"
+runner = "local:docker"
 
 [global.run.test_params]
-size      = "1GB"
-latencies = '[]'
+size      = "500MB"
+latencies = '["20ms", "40ms"]'
+no_latency_case = "true"
 bandwidths = '[]'
 concurrency = "1"
 chunk_size = "20"
 links_per_level = "1024"
 raw_leaves = "true"
 disk_store = "true"
-memory_snapshots = "detailed"
-compare_http = "false"
+compare_http = "true"
 max_in_progress_requests = "20"
-max_memory_per_peer = "256MiB"
-max_memory_total = "1GiB"
+max_memory_per_peer = "16Mib"
+max_memory_total = "4GiB"
 
 [[groups]]
 id = "providers"
 instances = { count = 1 }
-[groups.resources]
-memory = "4096Mi"
-cpu = "1000m"
 
 [[groups]]
 id = "requestors"
 instances = { count = 1 }
-[groups.resources]
-memory = "4096Mi"
-cpu = "1000m"
